feat: add api get delete book by book id
